# datapipeline-compalison

./: .gitignore  README.md
airflow/: .dockerignore  Dockerfile  README.md  requirements.txt  skaffold.yaml
airflow/dags/: example_bash.py  example_python_decorator.py
luigi/: .dockerignore  Dockerfile  README.md  pyproject.toml  skaffold.yaml
luigi/assets/chart/: requirements.yaml  values.yaml
luigi/assets/chart/templates/: service.yaml
luigi/assets/kubernetes/: job.yaml
luigi/src/luigik8s/scripts/: main.py
